--- a/src/main/webapp/templates/footer.html
+++ b/src/main/webapp/templates/footer.html
@@ -3,9 +3,9 @@
 <body>
 
 <div th:fragment="copy">
-    <div class="card">
+    <div class="card-footer">
         <div class="card-body">
-            &copy; 2019 Codecool Budapest
+            &copy; 2021 Codecool DDLN Team Miskolc
         </div>
     </div>
 </div>
