--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -26,6 +26,7 @@
     <!-- End of Bootstrap components -->
 
     <link rel="stylesheet" type="text/css" href="/static/css/custom.css" />
+    <scrip src="src/main/webapp/static/js/script.js" defer></scrip>
 </head>
 
 <body>
@@ -42,7 +43,7 @@
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
             <li><a href="/" class="nav-link px-2 link-secondary">Home</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">Features</a></li>
+            <li><a href="/alma" class="nav-link px-2 link-dark">Features</a></li>
             <li><a href="#" class="nav-link px-2 link-dark">Pricing</a></li>
             <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
             <li><a href="#" class="nav-link px-2 link-dark">About</a></li>
@@ -55,7 +56,22 @@
     </header>
 </div>
 
+
 <div class="container">
+    <div class="card">
+        <select name="category" id="category" onchange="changeCategory()">
+            <option value="tablet">Tablet</option>
+            <option value="phone">Phone</option>
+        </select>
+    </div>
+
+    <div class="card">
+        <select name="supplier" id="supplier" onchange="changeSupplier()">
+            <option value="amazon">Amazon</option>
+            <option value="lenovo">Lenovo</option>
+        </select>
+    </div>
+
     <div class="card">
         <strong th:text="${category.name}">Category Title</strong>
     </div>
