Implemented select supplier

--- a/src/main/webapp/templates/product/products.html
+++ b/src/main/webapp/templates/product/products.html
@@ -75,7 +75,7 @@
     </div>
 
     <div class="card">
-        <strong>Products</strong>
+        <strong th:text="${category.name}">Category Title</strong>
     </div>
 
     <div id="products" class="row">
