--- a/src/main/webapp/templates/product/cart.html
+++ b/src/main/webapp/templates/product/cart.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <!doctype html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="/static/js/counter.js" defer></script>
 <head>
     <meta charset="utf-8" />
     <meta name="author" content="Codecool" />
@@ -73,8 +72,10 @@
                     <div class="card-text">
                         <p class="lead" th:text="${prod.getPrice()}">100 USD</p>
                     </div>
-                    <div class="counter">
-                        <input type="number" class="count" name="qty" value="1">
+                    <div id="counter_div">
+                        <input type="text" size="25" value="1" id="count">
+                        <input type="button" value="-" id="minus" onclick="minus()">
+                        <input type="button" value="+" id="plus" onclick="plus()">
                     </div>
                 </div>
             </div>
