--- a/src/main/webapp/templates/product/cart.html
+++ b/src/main/webapp/templates/product/cart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!doctype html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<script src="/static/js/counter.js" defer></script>
+
 <head>
     <meta charset="utf-8" />
     <meta name="author" content="Codecool" />
@@ -74,8 +74,8 @@
                     </div>
                     <div id="counter_div">
                         <input type="text" size="25" value="1" id="count">
-                        <input type="button" value="-" id="minus" onclick="minus()">
-                        <input type="button" value="+" id="plus" onclick="plus()">
+                        <input type="button" value="-" id="minus" onclick="minusQuantity()">
+                        <input type="button" value="+" id="plus" onclick="plusQuantity">
                     </div>
                 </div>
             </div>
@@ -85,6 +85,7 @@
 </div>
 <div class="summary">
     <h3>Order summary</h3>
+    <h2 th:text="'Total price: ' + ${totalPrice} + ' USD'">Total price</h2>
 </div>
 
 
