--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -46,7 +46,7 @@
             <li><a href="/phone" class="nav-link px-2 link-dark">Features</a></li>
             <li><a href="#" class="nav-link px-2 link-dark">Pricing</a></li>
             <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
-            <li><a href="/cart" class="nav-link px-2 link-dark">Shopping cart: item(s)</a></li>
+            <li><a href="/cart" class="nav-link px-2 link-dark" th:text="'Shopping cart: ' + ${cartCounter} + ' item(s)'">Shopping cart: item(s)</a></li>
         </ul>
 
         <div class="col-md-3 text-end">
@@ -95,7 +95,7 @@
                         <p class="lead" th:text="${prod.getPrice()}">100 USD</p>
                     </div>
                     <div class="card-text">
-                        <a class="btn btn-success" href="#">Add to cart</a>
+                        <a class="btn btn-success" th:attr="href='/product?add-cart='+ ${prod.id}">Add to cart</a>
                     </div>
                 </div>
             </div>
