--- a/src/main/webapp/templates/product/cart.html
+++ b/src/main/webapp/templates/product/cart.html
@@ -78,6 +78,7 @@
                         <input type="text" size="1" value="1" id="count">
                         <input type="button" value="+" id="plus" onclick="plusQuantity">
                     </div>
+                    <butto >Remove</butto>
                 </div>
             </div>
         </div>
@@ -85,7 +86,9 @@
 <div class="summary">
     <h3>Order summary</h3>
     <h2 th:text="'Total price: ' + ${totalPrice} + ' USD'">Total price</h2>
+    <h2> <a href="/checkout"> Checkout</a> </h2>
 </div>
+
 </div>
 
 
