--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -95,7 +95,7 @@
                         <p class="lead" th:text="${prod.getPrice()}">100 USD</p>
                     </div>
                     <div class="card-text">
-                        <a class="btn btn-success" th:attr="href='/product?add-cart='+ ${prod.id}">Add to cart</a>
+                        <a class="btn btn-success" th:attr="href='/add-to-cart?add-cart=' + ${prod.id}">Add to cart</a>
                     </div>
                 </div>
             </div>
