--- a/src/main/webapp/templates/product/checkout.html
+++ b/src/main/webapp/templates/product/checkout.html
@@ -27,8 +27,8 @@
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <!-- End of Bootstrap components -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
+<!--  <link rel="preconnect" href="https://fonts.gstatic.com">-->
+<!--  <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">-->
   <!--    <link rel="stylesheet" type="text/css" href="/static/css/custom.css"/>-->
 
   <link rel="stylesheet" type="text/css" href="/static/css/payment.css"/>
@@ -40,6 +40,27 @@
 
 <div class="jumbotron text-center" style="height: 100px;">
   <h1>Codecool Shop!</h1>
+</div>
+
+<div class="container">
+  <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+    <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+      <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
+    </a>
+
+    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+      <li><a href="/" class="nav-link px-2 link-secondary">Home</a></li>
+      <li><a href="/phone" class="nav-link px-2 link-dark">Features</a></li>
+      <li><a href="#" class="nav-link px-2 link-dark">Pricing</a></li>
+      <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
+      <li><a href="/cart" class="nav-link px-2 link-dark" th:text="'Shopping cart: ' + ${cartCounter} + ' item(s)'">Shopping cart: item(s)</a></li>
+    </ul>
+
+    <div class="col-md-3 text-end">
+      <button type="button" class="btn btn-outline-primary me-2">Login</button>
+      <button type="button" class="btn btn-primary">Sign-up</button>
+    </div>
+  </header>
 </div>
 
 <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -85,10 +106,9 @@
     <div class="shopping-cart">
       <div class="cart">
         <h2>Shopping Cart</h2>
-
       </div>
+
       <div class="items" th:each="prod,iterStat : ${products}">
-        <div class="total" th:text="${'Total payment:'+' '+total+' '+prod.getDefaultCurrency()}"></div>
         <table class="table product-container">
           <tr class="item" >
             <td style="text-align: left" class="product-name" th:text="${prod.getName()}">Product name</td>
@@ -97,6 +117,7 @@
           </tr>
         </table>
       </div>
+      <div class="total" th:text="${'Total payment:'+' '+total+' USD'}">Total Price</div>
     </div>
 
     <div class="checkout">
