--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -43,9 +43,9 @@
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
             <li><a href="/" class="nav-link px-2 link-secondary">Home</a></li>
-            <li><a href="/phone" class="nav-link px-2 link-dark">Features</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">Pricing</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
+            <!--<li><a href="/phone" class="nav-link px-2 link-dark">Features</a></li>-->
+            <!--<li><a href="#" class="nav-link px-2 link-dark">Pricing</a></li>-->
+            <!--<li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>-->
             <li><a href="/cart" class="nav-link px-2 link-dark" th:text="'Shopping cart: ' + ${cartCounter} + ' item(s)'">Shopping cart: item(s)</a></li>
         </ul>
 
