--- a/src/main/webapp/templates/product/cart.html
+++ b/src/main/webapp/templates/product/cart.html
@@ -37,7 +37,6 @@
 
 <div class="jumbotron text-center">
     <h1>Codecool Shop</h1>
-    <h3>Your shopping cart </h3>
 </div>
 
 <div class="container">
@@ -52,7 +51,8 @@
         </ul>
 
         <div class="col-md-3 text-end">
-            <button type="button" class="btn btn-outline-primary me-2">Logout</button>
+            <button type="button" class="btn btn-outline-primary me-2">Login</button>
+            <button type="button" class="btn btn-primary">Sign-up</button>
         </div>
     </header>
 </div>
