--- a/src/main/webapp/templates/product/checkout.html
+++ b/src/main/webapp/templates/product/checkout.html
@@ -95,7 +95,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-        <button class="btn btn-outline-primary" type="submit"><a href="confirmation">Pay</a></button>
+        <button class="btn btn-outline-primary" id="pay-button" type="submit">Pay</button>
       </div>
     </div>
   </div>
@@ -144,8 +144,8 @@
       </div>
 
       <div class="submit">
-        <button id="paywith" class="btn btn-outline-primary" data-toggle="modal" data-target="#modal">Pay with</button>
-        <button class="btn btn-outline-primary" type="submit"><a href="/">Back to home</a></button>
+        <button id="paywith" class="btn btn-primary" data-toggle="modal" data-target="#modal">Pay with</button>
+        <button class="btn btn-outline-primary" id="back-to-cart" type="submit">Back to cart</button>
       </div>
     </div>
   </div>
