--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -46,7 +46,7 @@
             <!--<li><a href="/phone" class="nav-link px-2 link-dark">Features</a></li>-->
             <!--<li><a href="#" class="nav-link px-2 link-dark">Pricing</a></li>-->
             <!--<li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>-->
-            <li><a href="/cart" class="nav-link px-2 link-dark" th:text="'Shopping cart: ' + ${cartCounter} + ' item(s)'">Shopping cart: item(s)</a></li>
+            <li><a href="/cart" class="nav-link px-2 link-dark" th:text="'Shopping order: ' + ${cartCounter} + ' item(s)'">Shopping order: item(s)</a></li>
         </ul>
 
         <div class="col-md-3 text-end">
