--- a/src/main/webapp/static/css/custom.css
+++ b/src/main/webapp/static/css/custom.css
@@ -75,7 +75,7 @@
     opacity: 0.8;
     min-height: 78vh;
     height: auto;
-    width: 70%;
+    width: 80%;
     margin: auto;
 }
 
@@ -95,4 +95,9 @@ table {
     text-align: center;
     padding: 20px;
     margin: 10px;
+}
+
+#counter_div {
+    margin-top: 200%;
+
 }
