--- a/src/main/webapp/templates/product/checkout.html
+++ b/src/main/webapp/templates/product/checkout.html
@@ -111,9 +111,9 @@
       <div class="items" th:each="prod,iterStat : ${products}">
         <table class="table product-container">
           <tr class="item" >
-            <td style="text-align: left" class="product-name" th:text="${prod.getName()}">Product name</td>
-            <td><img class="smol" th:attr="src='/static/img/product_' + *{prod.id} + '.jpg'" alt=""/></td>
-            <td style="text-align: right" th:text="${prod.getDefaultPrice() + ' ' + prod.getDefaultCurrency()}">Product price</td>
+            <td style="text-align: left" class="product-name" th:text="${prod.key.name}">Product name</td>
+            <td><img class="smol" th:attr="src='/static/img/product_' + *{prod.key.id} + '.jpg'" alt=""/></td>
+            <td style="text-align: right" th:text="${prod.key.defaultPrice} + ' ' + ${prod.key.defaultCurrency}">Product price</td>
           </tr>
         </table>
       </div>
