--- a/src/main/webapp/templates/product/checkout.html
+++ b/src/main/webapp/templates/product/checkout.html
@@ -73,24 +73,26 @@
         </button>
       </div>
       <div class="modal-body">
-        <div class="credit-card">
-          <label for="card-number1">Card number: </label>
-          <input class="in-modal" type="text" required id="card-number1" minlength="8" maxlength="8" size="8">
-          <input class="in-modal" type="text" required id="card-number2" minlength="8" maxlength="8" size="8">
-          <input class="in-modal" type="text" id="card-number3" minlength="8" maxlength="8" size="8"><br>
-          <label for="holder">Card holder: </label>
-          <input class="in-modal" type="text" required id="holder"><br>
-          <label for="expiry">Expiry date: </label>
-          <input class="in-modal" type="text" required id="expiry" minlength="1" maxlength="2" size="2" placeholder="MM"><span id="slash">/</span>
-          <input class="in-modal" type="text" required id="year" minlength="1" maxlength="2" size="2" placeholder="YY"><br>
-          <label for="code">Code: </label>
-          <input class="in-modal" type="password" required id="code" minlength="3" maxlength="3" size="3">
+        <div  class="credit-card">
+            <label for="card-number1">Card number: </label>
+            <input class="in-modal" type="text" required id="card-number1" minlength="8" maxlength="8" size="8">
+            <input class="in-modal" type="text" required id="card-number2" minlength="8" maxlength="8" size="8">
+            <input class="in-modal" type="text" id="card-number3" minlength="8" maxlength="8" size="8"><br>
+            <label for="holder">Card holder: </label>
+            <input class="in-modal" type="text" required id="holder"><br>
+            <label for="expiry">Expiry date: </label>
+            <input class="in-modal" type="text" required id="expiry" minlength="1" maxlength="2" size="2" placeholder="MM"><span id="slash">/</span>
+            <input class="in-modal" type="text" required id="year" minlength="1" maxlength="2" size="2" placeholder="YY"><br>
+            <label for="code">Code: </label>
+            <input class="in-modal" type="password" required id="code" minlength="3" maxlength="3" size="3">
+
         </div>
+
         <div class="paypal">
-          <label for="username">Username: </label>
-          <input class="in-modal" type="text" required id="username" size="20" maxlength="50"><br>
-          <label for="password">Password: </label>
-          <input class="in-modal" type="password" required id="password" maxlength="50"><br>
+            <label for="username">Username: </label>
+            <input class="in-modal" type="text" required id="username" size="20" maxlength="50"><br>
+            <label for="password">Password: </label>
+            <input class="in-modal" type="password" required id="password" maxlength="50"><br>
         </div>
       </div>
       <div class="modal-footer">
@@ -122,6 +124,7 @@
 
     <div class="checkout">
       <div class="user">
+        <form method="post" action="/userinfo">
         <h2>Email</h2>
         <input class="user-data" type="text" required placeholder="First name" id="first"><br>
         <input class="user-data" type="text" required placeholder="Last name"  id="last"><br>
@@ -130,6 +133,9 @@
         <input class="user-data" type="text" required placeholder="City" id="city">
         <input class="user-data" type="text" required placeholder="Address" id="address">
         <input class="user-data" type="text" required placeholder="Post code" minlength="4" maxlength="4" size="6"  id="postcode"><br>
+
+        </form>
+
       </div>
       <div class="payment-info">
         <h2>Payment information</h2><br>
