--- a/src/main/webapp/templates/product/checkout.html
+++ b/src/main/webapp/templates/product/checkout.html
@@ -151,7 +151,7 @@
 
       <div class="submit">
         <button id="paywith" class="btn btn-primary" data-toggle="modal" data-target="#modal">Pay with</button>
-        <button class="btn btn-outline-primary" id="back-to-order" type="submit">Back to order</button>
+        <button class="btn btn-outline-primary" id="back-to-cart" type="submit">Back to order</button>
       </div>
     </div>
   </div>
