login and registration

--- a/src/main/webapp/templates/product/index.html
+++ b/src/main/webapp/templates/product/index.html
@@ -49,9 +49,17 @@
             <li><a href="/cart" class="nav-link px-2 link-dark" th:text="'Shopping order: ' + ${cartCounter} + ' item(s)'">Shopping order: item(s)</a></li>
         </ul>
 
-        <div class="col-md-3 text-end">
-            <button type="button" class="btn btn-outline-primary me-2">Login</button>
-            <button type="button" class="btn btn-primary">Sign-up</button>
+        <div class="col-md-4 text-end">
+            <div th:if="${session.name != null}" th:utext="${'Logged in as <strong>' + session.name + '</strong>,'}">Logged in</div>
+            <div th:if="${session.name != null}"><a href="/logout">&nbsp;Logout</a></div>
+            <div th:unless="${session.name != null}">
+                <form class="d-flex" action="/login" method="post">
+                    <input class="form-control me-2" name="name" type="text" placeholder="Username" aria-label="Username" required minlength="3" title="Must be 3 characters long" >
+                    <input class="form-control me-2" name="password" type="password" placeholder="Password" aria-label="Password" required minlength="3" title="Must be 3 characters long" >
+                    <button class="btn btn-outline-primary me" type="submit">Login</button>
+                </form>
+            </div>
+            <button type="button" class="btn btn-primary me-3" onClick="registrationButton()">Registration</button>
         </div>
     </header>
 </div>
@@ -105,6 +113,6 @@
 </div>
 
 <div th:replace="footer.html :: copy"></div>
-
+<script src="/static/js/payment.js" defer></script>
 </body>
 </html>
