--- a/src/main/webapp/templates/product/order.html
+++ b/src/main/webapp/templates/product/order.html
@@ -43,10 +43,10 @@
             <li><a href="/order" class="nav-link px-2 link-dark" th:text="'Shopping order: ' + ${cartCounter} + ' item(s)'">Shopping order: item(s)</a></li>
         </ul>
 
-        <div class="col-md-3 text-end">
-            <button type="button" class="btn btn-outline-primary me-2">Login</button>
-            <button type="button" class="btn btn-primary">Sign-up</button>
-        </div>
+<!--        <div class="col-md-3 text-end">-->
+<!--            <button type="button" class="btn btn-outline-primary me-2">Login</button>-->
+<!--            <button type="button" class="btn btn-primary">Sign-up</button>-->
+<!--        </div>-->
     </header>
 </div>
 
