--- a/src/main/webapp/static/css/custom.css
+++ b/src/main/webapp/static/css/custom.css
@@ -159,8 +159,9 @@ input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
-input:disabled{
-    background-color:white;
+input:disabled {
+    background-color: white;
+}
 .list-group-item-text
 {
     margin: 0 0 11px;
