--- a/src/main/webapp/templates/product/cart.html
+++ b/src/main/webapp/templates/product/cart.html
@@ -45,10 +45,10 @@
             <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"/></svg>
         </a>
 
-        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="/" class="nav-link px-2 link-secondary">Back to Home</a></li>
-            <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>
-        </ul>
+<!--        <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">-->
+<!--            <li><a href="/" class="nav-link px-2 link-secondary">Back to Home</a></li>-->
+<!--            <li><a href="#" class="nav-link px-2 link-dark">FAQs</a></li>-->
+<!--        </ul>-->
 
         <div class="col-md-3 text-end">
             <button type="button" class="btn btn-outline-primary me-2">Login</button>
